--- a/css/styles.css
+++ b/css/styles.css
@@ -430,6 +430,7 @@ button {
 .footer-container {
   display: flex;
   align-items: baseline;
+  flex-wrap: wrap;
 }
 
 .page-bottom {
@@ -481,6 +482,7 @@ button {
   justify-content: center;
   align-items: center;
   gap: 16px;
+  margin-right: 80px;
 }
 
 .footer-socials-link {
@@ -497,4 +499,285 @@ button {
 .footer-socials-icon,
 .team-socials-icon {
   fill: #f4f4fd;
+}
+
+.subscription-form {
+  display: flex;
+  align-items: flex-end;
+}
+
+.subscription-form label {
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+}
+
+.subscription-form input {
+  margin-top: 16px;
+  margin-right: 24px;
+  height: 40px;
+  width: 264px;
+  border-radius: 4px;
+  border: 1px solid #fff;
+  background-color: transparent;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  color: #fff;
+  padding: 8px 16px;
+}
+
+.subscription-form input::placeholder {
+  color: #fff;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+}
+
+.subscribe-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 16px;
+  max-width: ;
+  color: #fff;
+  background-color: #4d5ae5;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding: 8px 24px;
+  border: none;
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-button:hover,
+.subscribe-button:focus {
+  background-color: #404bbf;
+}
+
+.container-subscribe-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* -----------------------------------MODAL----------------------------------- */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  min-height: 584px;
+  background-color: #fcfcfc;
+  border-radius: 4px;
+  padding: 72px 24px 24px 24px;
+}
+
+.callback-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  height: 24px;
+  width: 24px;
+  line-height: 0;
+  padding: 7px;
+  border-radius: 50px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  fill: #2e2f42;
+  background-color: #e7e9fc;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.callback-close-btn:hover,
+.callback-close-btn:focus {
+  background-color: #404bbf;
+  border-color: #404bbf;
+  fill: #ffffff;
+}
+
+.callback-title {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+
+.container-callback-input {
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  padding-left: 38px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: 0px solid transparent;
+}
+
+.container-callback-input:focus {
+  border-color: #4d5ae5;
+}
+
+.container-callback-input:focus + .callback-form-icon {
+  fill: #4d5ae5;
+}
+
+.container-callback {
+  margin-bottom: 8px;
+}
+
+.container-callback-label {
+  display: block;
+  color: #8e8f99;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  margin-bottom: 4px;
+}
+
+.callback-input-wrapper {
+  position: relative;
+}
+
+.callback-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.container-callback-comment {
+  color: rgba(46, 47, 66, 0.4);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  width: 100%;
+  height: 120px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transperent;
+  padding: 8px 16px;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: 0px solid transparent;
+}
+
+.container-callback-comment:focus {
+  border-color: #4d5ae5;
+}
+
+.container-callback-comment::placeholder {
+  color: rgba(46, 47, 66, 0.4);
+}
+
+/* fucking checkbox */
+
+.callback-form-own-checkbox {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  cursor: pointer;
+  margin-right: 8px;
+}
+
+.container-callback-checkbox:checked
+  + .container-callback-checkbox-label
+  > .callback-form-own-checkbox {
+  background-color: #4d5ae5;
+  border-color: #4d5ae5;
+}
+
+.container-callback-checkbox:focus
+  + .container-callback-checkbox-label
+  > .callback-form-own-checkbox {
+  outline: 1px solid #4d5ae5;
+}
+
+.callback-form-own-checkbox-icon {
+  fill: #f4f4fd;
+  opacity: 0;
+}
+
+.container-callback-checkbox:checked
+  + .container-callback-checkbox-label
+  .callback-form-own-checkbox-icon {
+  opacity: 1;
+}
+
+.link-to-privacy-policy {
+}
+
+.container-callback-checkbox-label {
+  color: #8e8f99;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+
+.callback-checkbox-wrapper {
+  margin-bottom: 24px;
+}
+
+.callback-send-btn {
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 169px;
+  height: 56px;
+  color: #fff;
+  padding: 16px 32px;
+  background-color: #4d5ae5;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  margin-left: auto;
+  margin-right: auto;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.callback-send-btn:hover,
+.callback-send-btn:focus {
+  background-color: #404bbf;
 }
