--- a/css/styles.css
+++ b/css/styles.css
@@ -430,7 +430,6 @@ button {
 .footer-container {
   display: flex;
   align-items: baseline;
-  flex-wrap: wrap;
 }
 
 .page-bottom {
@@ -501,14 +500,8 @@ button {
   fill: #f4f4fd;
 }
 
-.subscription-form {
-  display: flex;
-  align-items: flex-end;
-}
-
-.subscription-form label {
-  display: flex;
-  flex-direction: column;
+.subscribe-title {
+  margin-bottom: 16px;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -516,20 +509,26 @@ button {
   color: #fff;
 }
 
-.subscription-form input {
-  margin-top: 16px;
-  margin-right: 24px;
+.subscription-form {
+  display: flex;
+  gap: 24px;
+}
+
+.subscribe-input {
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   height: 40px;
   width: 264px;
   border-radius: 4px;
   border: 1px solid #fff;
   background-color: transparent;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   color: #fff;
-  padding: 8px 16px;
+  padding-left: 16px;
 }
 
-.subscription-form input::placeholder {
+.subscribe-input::placeholder {
   color: #fff;
   font-size: 12px;
   line-height: 2;
@@ -540,15 +539,16 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  column-gap: 16px;
-  max-width: ;
+  min-width: 165px;
+  height: 40px;
+  font-family: "Roboto", sans-serif;
   color: #fff;
   background-color: #4d5ae5;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  padding: 8px 24px;
+  cursor: pointer;
   border: none;
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -560,9 +560,10 @@ button {
 }
 
 .container-subscribe-icon {
+  margin-left: 16px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-self: center;
+  justify-self: center;
 }
 
 /* -----------------------------------MODAL----------------------------------- */
@@ -597,29 +598,42 @@ button {
   background-color: #fcfcfc;
   border-radius: 4px;
   padding: 72px 24px 24px 24px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .callback-close-btn {
   position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   top: 24px;
   right: 24px;
   height: 24px;
   width: 24px;
+  padding: 0;
   line-height: 0;
-  padding: 7px;
-  border-radius: 50px;
+  border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   fill: #2e2f42;
   background-color: #e7e9fc;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.callback-close-btn-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .callback-close-btn:hover,
 .callback-close-btn:focus {
   background-color: #404bbf;
-  border-color: #404bbf;
+  border: none;
+}
+
+.callback-close-btn:hover .callback-close-btn-icon,
+.callback-close-btn:focus .callback-close-btn-icon {
   fill: #ffffff;
 }
 
@@ -689,7 +703,7 @@ button {
   height: 120px;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  background-color: transperent;
+  background-color: transparent;
   padding: 8px 16px;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -707,6 +721,7 @@ button {
 /* fucking checkbox */
 
 .callback-form-own-checkbox {
+  fill: transparent;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -716,13 +731,17 @@ button {
   border-radius: 2px;
   cursor: pointer;
   margin-right: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .container-callback-checkbox:checked
   + .container-callback-checkbox-label
   > .callback-form-own-checkbox {
   background-color: #4d5ae5;
-  border-color: #4d5ae5;
+  border: none;
+  fill: #f4f4fd;
 }
 
 .container-callback-checkbox:focus
@@ -732,7 +751,6 @@ button {
 }
 
 .callback-form-own-checkbox-icon {
-  fill: #f4f4fd;
   opacity: 0;
 }
 
@@ -759,10 +777,8 @@ button {
 
 .callback-send-btn {
   border-radius: 4px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 169px;
+  display: block;
+  min-width: 169px;
   height: 56px;
   color: #fff;
   padding: 16px 32px;
@@ -780,4 +796,12 @@ button {
 .callback-send-btn:hover,
 .callback-send-btn:focus {
   background-color: #404bbf;
+}
+
+.comment-add {
+  margin-bottom: 16px;
+}
+
+.link-to-privacy-policy {
+  color: #4d5ae5;
 }
